# evo-wasm

./: .dockerignore  .gitignore  ANALYSIS_MANIFEST.md  CODE_REFERENCE.md  Cargo.toml  DESIGN.md  Dockerfile.server  Dockerfile.worker  EXECUTIVE_SUMMARY.txt  INVESTIGATION_INDEX.md  MECHANICS_REFERENCE.md  README.md  SURVIVAL_ANALYSIS.md  docker-compose.yml  gha  otel-collector-config.yaml  prometheus.yml
.github/workflows/: build-and-push.yml  build-server.yml  build-worker.yml  test.yml
crates/evo-core/: Cargo.toml
crates/evo-core/src/: config.rs  error.rs  fitness.rs  lib.rs  types.rs
crates/evo-ir/: Cargo.toml
crates/evo-ir/src/: compiler.rs  instruction.rs  lib.rs  mutation.rs  program.rs  validation.rs
crates/evo-runtime/: Cargo.toml
crates/evo-runtime/src/: context.rs  host_functions.rs  instance.rs  lib.rs
crates/evo-server/: Cargo.toml
crates/evo-server/src/: api.rs  checkpoint.rs  database.rs  evolution.rs  job_manager.rs  main.rs  telemetry.rs
crates/evo-worker/: Cargo.toml
crates/evo-worker/src/: client.rs  main.rs  telemetry.rs
crates/evo-world/: Cargo.toml
crates/evo-world/src/: grid.rs  island.rs  lib.rs  organism.rs  simulation.rs
