[workspace]
resolver = "2"
members = [
    "crates/evo-core",
    "crates/evo-ir",
    "crates/evo-runtime",
    "crates/evo-world",
    "crates/evo-server",
    "crates/evo-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Evo-WASM Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WASM runtime
wasmtime = "19.0"
wasmtime-wasi = "19.0"
wasm-encoder = "0.201"
wabt = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }

# OpenTelemetry
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["tokio"] }
opentelemetry-semantic-conventions = "0.14"
tracing-opentelemetry = "0.23"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
rand = "0.8"
rand_chacha = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"

# Serialization
bincode = "1.3"
rmp-serde = "1.1"

# Testing
proptest = "1.4"
