[package]
name = "evo-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
evo-core = { path = "../evo-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
wasm-encoder = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
wabt = { workspace = true }
