[package]
name = "evo-world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
evo-core = { path = "../evo-core" }
evo-ir = { path = "../evo-ir" }
evo-runtime = { path = "../evo-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
